Fixed images overflow width, sorted articles and projects by updated date

--- a/public/css/retro/reading_article.css
+++ b/public/css/retro/reading_article.css
@@ -213,6 +213,7 @@
     border-color: #3A3A3A;
     border-style: solid;
     box-shadow: 3px 3px 1px 0px rgba(0,0,0,0.3);
+    max-width: 100%;
 }
 
 body.dark-mode .article-cover{
